unpackaged/main/default/objects/CampaignMember/fields/Account_Subscription_Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Subscription_Customer_Status__c</fullName>
    <formula>IF(
NOT(ISBLANK( ContactId )),
 TEXT(Contact.Account.Subscription_Status__c ),
 TEXT(Lead.Account__r.Subscription_Status__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Subscription Customer Status</label>
    <type>Text</type>
</CustomField>