unpackaged/main/default/objects/CampaignMember/fields/Bad_Address__c.field-meta.xml
<CustomField>
    <fullName>Bad_Address__c</fullName>
    <formula>IF( 
NOT(ISBLANK( ContactId )), 
( Contact.Bad_Address__c ), 
( Lead.Bad_Address__c ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bad Address?</label>
    <type>Checkbox</type>
</CustomField>