unpackaged/main/default/objects/CampaignMember/fields/Campaign_Members__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Members__c</fullName>
    <description>Power of One.</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>