unpackaged/main/default/objects/CampaignMember/fields/Engagement_Priority_Score__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Priority_Score__c</fullName>
    <formula>IF( NOT( ISBLANK( ContactId ))  ,  Contact.Engagement_Priority_Score__c ,  
      IF( NOT( ISBLANK(  LeadId  )),  Lead.Engagement_Priority_Score__c , null) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagement Priority Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>