unpackaged/main/default/objects/CampaignMember/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <formula>IF( NOT( ISBLANK( ContactId ))  ,  Contact.Expiration_Date__c ,  
      IF( NOT( ISBLANK(  LeadId  )),  Lead.Expiration_Date__c , null) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>