unpackaged/main/default/objects/CampaignMember/fields/User_Type__c.field-meta.xml
<CustomField>
    <fullName>User_Type__c</fullName>
    <description>Pushes User Type from the Lead/Contact onto the Campaign Member</description>
    <formula>IF(
NOT(ISBLANK( ContactId )),
 TEXT(Contact.User_Type__c ),
 TEXT(Lead.User_Type__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Type</label>
    <type>Text</type>
</CustomField>